(cargo-release) start next development iteration 0.0.2-alpha.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chromium"
 description = "Helps add some stability to your metal!"
-version = "0.0.1"
+version = "0.0.2-alpha.0"
 authors = ["Lokathor <zefria@gmail.com>"]
 repository = "https://github.com/Lokathor/chromium"
 edition = "2018"
