--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Display Versions
+      run: cargo --version && rustc --version
     - name: Build
       run: cargo build --verbose
     - name: Run tests
