--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,11 +4,11 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+    - name: Display Versions
+      run: cargo --version && rustc --version
     - name: Build
       run: cargo build --verbose
     - name: Run tests
