--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Run standard tests
       run: cargo test --verbose
     - name: Run miri tests
-      - run: |
+      run: |
         rustup component add miri
         cargo miri setup
         cargo miri test --verbose --no-default-features
