--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,7 @@ jobs:
       run: cargo test --verbose
     - name: Run miri tests
       run: |
+        rustup default nightly
         rustup component add miri
         cargo miri setup
         cargo miri test --verbose --no-default-features
