--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,10 @@ jobs:
     - name: Stable Build
       run: cargo build --verbose
     - name: Stable Tests
-      run: cargo test --verbose
+      run: |
+        cargo test --verbose --no-default-features
+        cargo test --verbose
+        cargo test --verbose --all-features
     - name: Nightly Miri Tests
       run: |
         rustup default nightly
